# QLion

./: CMakeLists.txt  FolderTreeView.cpp  FolderTreeView.h  Highlighter.cpp  Highlighter.h  MyFileSystemModel.cpp  MyFileSystemModel.h  MyHighlighter.cpp  MyHighlighter.h  QLionCodePage.cpp  QLionCodePage.h  QLionTabWidget.cpp  QLionTabWidget.h  README.md  findreplaceview.cpp  findreplaceview.h  findreplaceview.ui  icons.qrc  keywords.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qlionterminal.cpp  qlionterminal.h  qlionterminal.ui  runconfig.cpp  runconfig.h  runconfig.ui  runconfigwindow.cpp  runconfigwindow.h  runconfigwindow.ui  runstatus.h  ui_findreplaceview.h  ui_mainwindow.h  ui_qlionterminal.h  ui_runconfig.h  ui_runconfigwindow.h  高级语言程序设计实验报告.md
resources/keywords/: punctuations.txt  suffix_support.txt
高级语言程序设计实验报告.assets/: ccc.cpp
